# markitdown-lambda

./: .gitignore  Dockerfile  README.md  lambda_handler.py  main.py  pyproject.toml  s3.py  start.py  test_local.py
infra/: deploy.sh  main.tf
