[project]
name = "markitdown-lambda"
version = "0.1.0"
description = "A Lambda function wrapper for Microsoft's [markitdown library](https://github.com/microsoft/markitdown) to convert various file formats to Markdown Text."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aws-lambda-powertools>=3.11.0",
    "boto3>=1.37.28",
    "fastapi[standard]>=0.115.12",
    "markitdown[pptx,docx,xlsx,xls,pdf]>=0.1.1",
    "nanoid>=2.0.0",
    "pydantic>=2.11.2",
    "ruff>=0.11.4",
    "uvicorn>=0.34.2",
]
